// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Tag component renders with blue background color when tag is 'M' 1`] = `
<div>
  <span
    class="dataTag"
    data-tag="M"
  >
    M
  </span>
</div>
`;

exports[`Data Tag component renders with red background color when tag is 'E' 1`] = `
<div>
  <span
    class="dataTag"
    data-tag="E"
  >
    E
  </span>
</div>
`;

exports[`Data Tag component renders with yellow background color when tag is 'C' 1`] = `
<div>
  <span
    class="dataTag"
    data-tag="C"
  >
    C
  </span>
</div>
`;
